# contentstack-competitive-intel

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: competitive-intel.yml  pages.yml
config/: config.yaml
data/battlecards/json/: bloomreach.json  contentful.json  hygraph.json  kontent-ai.json  sanity.json  storyblok.json
scripts/: inject_battlecards.py
src/: __init__.py  orchestrator.py
src/agents/: __init__.py  base.py  battlecard_writer.py  company_intel.py  extraction.py  positioning_analysis.py  qa_agent.py  source_discovery.py  web_monitor.py
src/connectors/: __init__.py  content_hasher.py  diff_engine.py  web_fetcher.py
src/models/: __init__.py  schema.py
src/outputs/: __init__.py  digest_output.py  json_output.py  markdown_output.py
src/storage/: database.py
src/utils/: __init__.py  config.py  logging.py
tests/: test_config.py  test_connectors.py  test_outputs.py  test_schema.py  test_storage.py
